# libgit2-backends

CMake/: FindMongoC.cmake  FindMongoc.cmake
mongodb/: CMakeLists.txt  mongoc.c
